# cpphttpjson

./: .gitignore  CMakeLists.txt  Forecast.h  ISerializable.h  Readme.md  main.cpp
.github/workflows/: cmake.yml
cmake/: FindJsoncpp.cmake
